--- a/config/database.yml
+++ b/config/database.yml
@@ -1,10 +1,9 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  host: db
+  host: localhost
   username: user
   password: password
-  pool: 5
 
 development:
   <<: *default
